docs/exercises/complex-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: complex-pod
  namespace: ckad
spec:
  containers:
    - name: app
      image: nginx:1.25.1
      ports:
        - containerPort: 80
