docs/exercises/data-exchage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: data-exchange
  namespace: ckad
spec:
  containers:
    - name: main-app
      image: busybox:1.36.1
      command: ["sh", "-c", "counter=1; while true; do echo \"${counter}-data.txt\" > /var/app/data/${counter}-data.txt; counter=$((counter + 1)); sleep 30; done"]
      volumeMounts:
        - mountPath: /var/app/data
          name: data-volume
    - name: sidecar
      image: busybox:1.36.1
      command: ["sh", "-c", "while true; do ls /var/app/data | wc -l; sleep 60; done"]
      volumeMounts:
        - mountPath: /var/app/data
          name: data-volume
  volumes:
    - name: data-volume
      emptyDir: {}
