docs/exercises/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ckad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
      tier: backend
  template:
    metadata:
      labels:
        app: v1
        tier: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.23.4
          resources:
            requests:
              memory: "500Mi"
              cpu: "0.5"
            limits:
              memory: "500Mi"
              cpu: "0.5"
