docs/exercises/deployment-nginx-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  namespace: ckad
spec:
  replicas: 3
  selector:
    matchLabels:
      version: green
  template:
    metadata:
      labels:
        version: green
    spec:
      containers:
        - name: nginx
          image: nginx:1.23.4
          ports:
            - containerPort: 80
