docs/exercises/hello-world-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - name: hello-world
      image: bmuschko/nodejs-hello-world:1.0.0
      ports:
        - containerPort: 3000
      resources:
        requests:
          memory: "500Mi"
          cpu: "100m"
          ephemeral-storage: "1Gi"
        limits:
          memory: "500Mi"
          ephemeral-storage: "2Gi"
      volumeMounts:
        - mountPath: /var/log
          name: log-volume
  volumes:
    - name: log-volume
      emptyDir: {}
