docs/exercises/labels-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  namespace: ckad
  labels:
    tier: frontend
    team: artemidis
  annotations:
    deployer: jacinto
spec:
  containers:
    - name: nginx
      image: nginx:1.25.1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
  namespace: ckad
  labels:
    tier: backend
    team: artemidis
  annotations:
    deployer:  jacinto
spec:
  containers:
    - name: nginx
      image: nginx:1.25.1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  namespace: ckad
  labels:
    tier: backend
    team: artemidis
spec:
  containers:
    - name: nginx
      image: nginx:1.25.1
