docs/exercises/labels-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: f5-nginx
  namespace: ckad
  labels:
    app: f5-nginx
    tool: helm
spec:
  containers:
    - name: nginx
      image: nginx:1.25.1
