docs/exercises/pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: ckad
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: logs-pvc
  containers:
    - image: nginx:1.25.1
      name: nginx
      volumeMounts:
        - mountPath: "/var/log/nginx"
          name: storage
