docs/exercises/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: ckad
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4-alpine
