docs/exercises/volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-container
  namespace: ckad
spec:
  volumes:
    - name: share-data
      emptyDir: {}
  containers:
    - name: container-1
      image: alpine:3.12.0
      args:
        - /bin/sh
        - -c
        - while true; do sleep 60; done;
      volumeMounts:
        - mountPath: "/etc/a"
          name: share-data
    - name: container-2
      image: alpine:3.12.0
      args:
        - /bin/sh
        - -c
        - while true; do sleep 60; done;
      volumeMounts:
        - mountPath: "/etc/b"
          name: share-data
