docs/exercises/myapp-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: ckad
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
  selector:
    app: myapp
