docs/exercises/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: ckad
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: myapp
