docs/exercises/service-nginx-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ckad
spec:
  type: ClusterIP
  selector:
    version: blue
  ports:
    - port: 80
      targetPort: 80
