docs/exercises/service-nginx-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ckad
spec:
  type: ClusterIP
  selector:
    version: green
  ports:
    - port: 80
      targetPort: 80
