docs/exercises/updated-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: y72
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
