docs/exercises/session13-exercise2-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s96
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: s96
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.25.3-alpine
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: s96
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 9999
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: s96
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: faulty.ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 3333
