docs/exercises/session14-exercise1-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-stack
  namespace: end-user
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              access: inside
          podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 80
