docs/exercises/session14-exercise2-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k1
  labels:
    role: consumer
---
apiVersion: v1
kind: Namespace
metadata:
  name: k2
  labels:
    role: producer
---
kind: Pod
apiVersion: v1
metadata:
  name: busybox
  namespace: k1
  labels:
    app: frontend
spec:
  containers:
    - name: busybox
      image: busybox:1.36.1
      command: ["sh", "-c", "sleep 1h"]
---
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  namespace: k2
  labels:
    app: backend
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4-alpine
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: k2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
